[package]
name = "picto-crab"
version = "3.0.0"
authors = ["RedstoneMedia <34373974+RedstoneMedia@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = []

[dependencies]
image = "0.25"
fast_image_resize = {version =  "5.2", features = ["image"] }
sysinfo = "0.36.1"
once_cell = "1.21"
interprocess = "2.2"
anyhow = "1.0"
reqwest = {version = "0.12", features = ["blocking"]}
mimalloc = { version = "0.1", default-features = false }